@@ -1,17 +1,39 @@
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        mavenCentral()
-        }
-    dependencies {
-        classpath 'com.bmuschko:gradle-docker-plugin:9.1.0'
-        }
-    }
-
 plugins {
-    id 'com.bmuschko.docker-remote-api' version '9.1.0'
-    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'java'
+    id "com.bmuschko.docker-java-application" version "9.1.0"
+    id "com.bmuschko.docker-remote-api" version "9.1.0"
     }
 
-apply plugin: 'com.bmuschko.docker-remote-api'
-apply plugin: 'java'
+repositories {
+    mavenCentral()
+    }
+
+dependencies {
+    implementation group: 'com.bmuschko', name: 'gradle-docker-plugin', version: '6.7.0'
+    implementation group: 'com.bmuschko', name: 'asciidoctorj-tabbed-code-extension', version: '0.3'
+    }
+
+docker {
+    javaApplication {
+        baseImage = 'dockerfile/java:openjdk-7-jre'
+        maintainer = 'Benjamin Muschko "benjamin.muschko@gmail.com"'
+        ports = [9090, 5701]
+        images = ['jettyapp:1.115', 'jettyapp:latest']
+        jvmArgs = ['-Xms256m', '-Xmx2048m']
+        }
+    }
+
+dockerBuildImage {
+
+    }
+
+dockerPushImage {
+
+    }
+
+dockerCreateDockerfile {
+    instruction 'RUN ls -la'
+    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
+    }
+
+dockerCreateDockerfile.instructionsFromTemplate file('Dockerfile.tmpl')
